Checkout page styling complete. Conflicting style issue causing buttons on homepage to shift position fixed. Incorrect data type on iframe dimensions corrected. Conflicting style issue on contact form causing title and submit button incorrect alignment fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@ html body {
     height: 520px;
 }
 
-
 /* Footer styling */
 footer {
     position:fixed;
@@ -94,7 +93,7 @@ footer {
 }
 
 /*Button styling*/
-.button {
+.button1 {
     padding: 5px;
     font-family: 'IM Fell Great Primer', cursive , sans-serif;
     font-size:medium;
@@ -163,7 +162,7 @@ footer {
         padding: 5px;
     }
 
-    /* cart item */
+/* cart item */
 .cart-item-remove {
     color: #343a40;
     transition: all 1s ease-in-out;
@@ -178,7 +177,7 @@ footer {
     margin:0;
 }
 
-    /* cart buttons */
+ /* cart buttons */
 .btn-pink {
     color: #d9b5b5 !important;
     border-color: #d9b5b5 !important;
@@ -224,11 +223,9 @@ footer {
 /*Video Styling */
 #music-video{
     margin-top:3%;
-    padding-left:7%;
 }
 
 #music-video iframe{
-    float: center;
     margin:20px;
 }
 
@@ -240,7 +237,7 @@ footer {
     text-align:center;
 }
 
-/*Form Styling*/
+/* Contact Form Styling*/
 .form-text{
     text-align: center;
     font-family: 'IM Fell Great Primer', cursive , sans-serif;
@@ -267,7 +264,7 @@ footer {
 }
 
 .price {
-  color: grey;
+  color:#55585c;
   font-size: 22px;
 }
 
@@ -292,6 +289,76 @@ footer {
     width: 100%;
 }
 
+/*Checkout form styling*/
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  flex: 25%;
+}
+
+.col-50 {
+  flex: 50%;
+}
+
+.col-75 {
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.container {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: xx-large;
+  color: #55585c;
+}
+
+.btn2 {
+  background-color: #343a40;
+  color: #d9b5b5;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn2:hover {
+  background-color: #55585c;
+}
+
 
 /*Screensize response*/
 
@@ -299,7 +366,7 @@ footer {
 /* Desktop response */
 @media screen and (min-width: 770px){
 
-    .button-position{
+    #button-position{
         margin-left: 40%;
         margin-right:40%;
         width: 20%;
@@ -321,7 +388,7 @@ footer {
         height: 100%;
     }
 
-    .button-position{
+    #button-position{
         margin-left: 40%;
         margin-right:40%;
         margin-top: 5%;
@@ -380,7 +447,7 @@ footer {
         height:6%;
     }
 
-    .button-position{
+    #button-position{
         margin-left: 20%;
         margin-right:20%;
         width: 60%;
@@ -460,76 +527,4 @@ footer {
         padding:0;
     }
 
-}
-
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  margin: 0 -16px;
-}
-
-.col-25 {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-}
-
-.col-50 {
-  -ms-flex: 50%; /* IE10 */
-  flex: 50%;
-}
-
-.col-75 {
-  -ms-flex: 75%; /* IE10 */
-  flex: 75%;
-}
-
-.col-25,
-.col-50,
-.col-75 {
-  padding: 0 16px;
-}
-
-.container {
-  background-color: #f2f2f2;
-  padding: 5px 20px 15px 20px;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-input[type=text] {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-label {
-  margin-bottom: 10px;
-  display: block;
-}
-
-.icon-container {
-  margin-bottom: 20px;
-  padding: 7px 0;
-  font-size: 24px;
-}
-
-.btn2 {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px;
-  margin: 10px 0;
-  border: none;
-  width: 100%;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 17px;
-}
-
-.btn2:hover {
-  background-color: #45a049;
 }
